// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastMessages positions at bottom when position="bottom" 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      {
        "bottom": 40,
        "top": "auto",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#EB3030",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M9 9L15 15M15 9L9 15"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages positions at top by default 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#EB3030",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M9 9L15 15M15 9L9 15"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages renders message when visible 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#EB3030",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M9 9L15 15M15 9L9 15"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages renders with custom styles 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#EB3030",
        },
        {
          "height": 5,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        {
          "padding": 10,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M9 9L15 15M15 9L9 15"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "padding": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          {
            "fontSize": 14,
          },
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        {
          "padding": 5,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
          "width": 30,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages renders with different status types: status-error 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#EB3030",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M9 9L15 15M15 9L9 15"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4293603376,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages renders with different status types: status-info 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#4392F9",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4282618617,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 10V16"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4282618617,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 8.01L12.01 8"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4282618617,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages renders with different status types: status-success 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#31B769",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGCircle
          cx={12}
          cy={12}
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
            ]
          }
          r={9}
          stroke={
            {
              "payload": 4281448297,
              "type": 0,
            }
          }
          strokeWidth={2}
        />
        <RNSVGPath
          d="M8 12.5L10.5 15L16 9.5"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281448297,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;

exports[`ToastMessages renders with different status types: status-warning 1`] = `
<View
  accessibilityLabel="Toast message"
  accessibilityRole="alert"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 2,
        "flexDirection": "row",
        "gap": 12,
        "left": 16,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.08,
        "shadowRadius": 8,
        "top": 60,
        "zIndex": 999,
      },
      false,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#EB3030",
          "borderBottomLeftRadius": 8,
          "borderTopLeftRadius": 8,
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 4,
        },
        {
          "backgroundColor": "#F7B305",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "borderRadius": 50,
          "height": 32,
          "justifyContent": "center",
          "width": 32,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={20}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 3 22 21 2 21z"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294423301,
              "type": 0,
            }
          }
          strokeLinejoin={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 9V13"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4294423301,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeWidth={2}
        />
        <RNSVGPath
          d="M12 17.01L12.01 17"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4294423301,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={2}
      style={
        [
          {
            "color": "#1C1B1F",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      Test toast message
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityLabel="Close toast"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderRadius": 50,
          "opacity": 1,
          "paddingHorizontal": 4,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#575757",
              "fontSize": 14,
            },
            undefined,
          ]
        }
      >
        ✕
      </Text>
    </View>
  </View>
</View>
`;
